undid PermSize and MaxPermSize changes since java8 is not really compatible with older sbt versions